# UE5CEDumper

./: .gitignore  .gitmodules  Claude.MD  Improvement_Analysis.md  Readme.MD  Readme_zh-TW.MD  build.ps1
dll/: CMakeLists.txt
dll/src/: BuildInfo.h.in  Constants.h  ExportAPI.cpp  ExportAPI.h  Memory.cpp  ObjectArray.cpp  ObjectArray.h  OffsetFinder.cpp  OffsetFinder.h  PipeProtocol.h  PipeServer.cpp  Signatures.h  UStructWalker.cpp  UStructWalker.h  dllmain.cpp  version.rc
docs/: AOB enhancement.txt  UE 5.3 AOBs.txt  UE 5.5 AOBs.txt  dev-log.md  pipe-protocol.md  test-games.md  ufunction-invoker-roadmap.md
scripts/: UE5CEDumper.CT  ue5_dissect.lua
ui/UE5DumpUI/: App.axaml.cs  Constants.cs  UE5DumpUI.csproj
ui/UE5DumpUI.Tests/: AobUsageServiceTests.cs  CeXmlExportServiceTests.cs  CsxExportServiceTests.cs  DumpServiceTests.cs  InvokeScriptTests.cs  ModelTests.cs
ui/UE5DumpUI/Core/: IDumpService.cs
ui/UE5DumpUI/Models/: ClassListResult.cs  EngineState.cs  FunctionInfoModel.cs  InstanceWalkResult.cs  LiveFieldValue.cs
ui/UE5DumpUI/Resources/Strings/: en.axaml  ja.axaml  zh-TW.axaml
ui/UE5DumpUI/Services/: AobUsageService.cs  CeXmlExportService.cs  CsxExportService.cs  DumpService.cs  InvokeScriptGenerator.cs  LoggingService.cs  PipeClient.cs
ui/UE5DumpUI/ViewModels/: GameClassFilterViewModel.cs  HexViewViewModel.cs  InstanceFinderViewModel.cs  LiveWalkerViewModel.cs  MainWindowViewModel.cs  ObjectTreeViewModel.cs  PointerPanelViewModel.cs
ui/UE5DumpUI/Views/: GameClassFilterPanel.axaml  HexViewPanel.axaml  InstanceFinderPanel.axaml  LiveWalkerPanel.axaml  LiveWalkerPanel.axaml.cs  MainWindow.axaml  ObjectTreePanel.axaml  PointerPanel.axaml
